@@ -30,12 +30,16 @@ else
       proc=sparc
     elif test -f $jdkincludedir/alpha/jni_md.h; then
       JAVAINCLUDES="$JAVAINCLUDES -I$jdkincludedir/alpha"
+      JAVALIBS='${jdkdir}/shlib'
       threads=native
       proc=alpha
     elif test -f $jdkincludedir/hp-ux/jni_md.h; then
       JAVAINCLUDES="$JAVAINCLUDES -I$jdkincludedir/hp-ux"
-      JAVALIBS='${jdkdir}/shlib'
-      threads=green
+      if test -d ${jdkdir}/lib/PA_RISC/native_threads; then
+        threads=native
+      else
+        threads=green
+      fi
       proc=PA_RISC
       LD_LIBRARY_PATH_VARNAME=SHLIB_PATH
     elif test -f $jdkincludedir/winnt/jni_md.h; then
