@@ -1,3 +1,7 @@
+1999-07-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* acjdk.m4: Add check for native threads on HPUX (found on v11).
+
 1999-07-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* actcltk.m4 (tclLibrary): Check for tclsh8.1.
